# x52pro-linux

./: Doxyfile.in  Makefile.am  comp_assert.h
daemon/: Makefile.am
kernel_module/: README.md  hid-saitek-x65.c
libx52/doc/: main.dox
x52dcomm/: Makefile.am  README.md  x52d_comm.h  x52d_comm_const.h  x52d_comm_setup.c  x52d_comm_setup.h
